assets/css/style.css
/* ... */
.crt-widget .crt-post-fullname a {
    color: #b49a7c!important;
}

.crt-post .crt-post-text {
    font-family: "Roboto-Regular";
    color: #444444;
}

.crt-widget .crt-load-more {
    border: 2px solid #b49a7c!important;
    color: #ffffff!important;
    background: #b49a7c!important;
    padding: 10px 15px;
    font-family: "Montserrat-Bold";
    text-transform: uppercase;
    box-shadow: none!important;
}

.crt-widget .crt-load-more:hover {
    background: #ffffff!important;
    color: #b49a7c!important;
}

.crt-widget .crt-load-more:focus {
    outline: none!important;
}

/*
.juicer-feed .j-paginate {
    border: 2px solid #b49a7c!important;
    color: #b49a7c!important;
}

.juicer-feed .j-paginate:hover {
    background: #b49a7c!important;
    color: #ffffff!important;
}

.j-loading {
 border-color: #b49a7c!important;
}

.j-loading:before {
 background-color: #b49a7c!important;
}

.sidebar {
    margin-top: 47px;
}
*/
/*===================================
=            MEDIA QUERY          =
===================================*/
@media only screen and (max-width: 991px) {
    .h-100 {
        height: auto!important;
    }
}


@media only screen and (max-width: 767px) {
    #gtco-reservation {
        height: 400px;
    }
    
    .row-gallery {
        margin: 100px 0 0 0!important;
    }
    
    h3.top-news, hr.top-news {
        display: none;
    }
}

@media only screen and (max-width: 768px) {
    #footer {
        text-align: center;
    }
    
    footer .nav-mastfoot {
        display: inline-flex;
    }
    
    footer ul.open-hours li {
        max-width: 200px!important;
        margin: auto!important;
    }
}

